updated header css to stop text jump and fixed word wrap issue on process page

--- a/app/assets/stylesheets/khaki/custom.css
+++ b/app/assets/stylesheets/khaki/custom.css
@@ -45,3 +45,7 @@
   margin-left: 24px;
   margin-right: 24px;
 }
+
+.nk-header-title .nk-header-table {
+    padding-top: 137px;
+}
